# swagger.json
@@ -233,6 +233,362 @@
           }
         }
       }
+    },
+    "/api/categories": {
+      "post": {
+        "description": "Criação de uma categoria",
+        "tags": ["Categorias"],
+        "requestBody": {
+          "description": "Dados necessários realizar o cadastro da categoria",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/RequestCategory"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      },
+      "get": {
+        "description": "Busca de todas as categorias",
+        "tags": ["Categorias"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Categorias cadastradas!",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ResponseCategory"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Erro!"
+          }
+        }
+      }
+    },
+    "/api/categories/{name}": {
+      "get": {
+        "description": "Busca de categoria pelo nome",
+        "tags": ["Categorias"],
+        "parameters": [
+          {
+            "name": "name",
+            "in": "path",
+            "description": "Nome da categoria",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Category: Java!",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ResponseCategory"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Dados incompletos!"
+          }
+        }
+      }
+    },
+    "/api/categories/{id}": {
+      "patch": {
+        "description": "Atualizar categoria pelo ID",
+        "tags": ["Categorias"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID da categoria",
+            "required": true,
+            "type": "string",
+            "format": "uuid"
+          },
+          {
+            "name": "name_category",
+            "in": "path",
+            "description": "Name da categoria",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Categoria atualizada sucesso!",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ResponseCategory"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Dados incompletos!"
+          }
+        }
+      }
+    },
+    "/api/comments": {
+      "post": {
+        "tags": ["Comentários"],
+        "description": "Criação de um comentário",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "description": "Dados necessários para cadastro de um comentário",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/RequestComment"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Cadastro realizado com sucesso!",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ResponseComment"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Dados incompletos!"
+          }
+        }
+      },
+      "get": {
+        "description": "Comentários cadastrados",
+        "tags": ["Comentários"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Comentários criados!",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ResponseComment"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Erro!"
+          }
+        }
+      }
+    },
+    "/api/comments/categories/{id}": {
+      "get": {
+        "description": "Busca de todas as categorias",
+        "tags": ["Comentários"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID da categoria",
+            "required": true,
+            "type": "string",
+            "format": "uuid"
+          }
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Categorias cadastradas!",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ResponseCategory"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Erro!"
+          }
+        }
+      }
+    },
+    "/api/comments/users/{id}": {
+      "get": {
+        "description": "Busca de todos os usuários",
+        "tags": ["Comentários"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID do usuário",
+            "required": true,
+            "type": "string",
+            "format": "uuid"
+          }
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Usuários cadastrados!",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ResponseUser"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Erro!"
+          }
+        }
+      }
+    },
+    "/api/comments/{id}": {
+      "patch": {
+        "description": "Atualizar comentário pelo ID",
+        "tags": ["Comentários"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID da categoria",
+            "required": true,
+            "type": "string",
+            "format": "uuid"
+          },
+          {
+            "name": "text_comment",
+            "in": "path",
+            "description": "Comentário",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Comentário atualizado sucesso!",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ResponseComment"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Dados incompletos!"
+          }
+        }
+      },
+      "delete": {
+        "description": "Deletar comentário pelo ID",
+        "tags": ["Comentários"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID do comentário",
+            "required": true,
+            "type": "string",
+            "format": "uuid"
+          }
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Comentário deletado sucesso!",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ResponseComment"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Dados incompletos!"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -313,6 +669,66 @@
             "type": "string",
             "description": "Id do usuário",
             "format": "uuid"
+          }
+        }
+      },
+      "RequestCategory": {
+        "type": "object",
+        "properties": {
+          "name_category": {
+            "type": "string",
+            "description": "Nome da categoria a ser criada",
+            "example": "Prisma"
+          }
+        }
+      },
+      "ResponseCategory": {
+        "type": "object",
+        "properties": {
+          "name_category": {
+            "type": "string",
+            "description": "Category: Prisma!",
+            "example": "Prisma"
+          }
+        }
+      },
+      "RequestComment": {
+        "type": "object",
+        "properties": {
+          "text_comment": {
+            "type": "string",
+            "description": "Comentário a ser criado",
+            "example": "Qual comando para realizar uma migração no prisma ?"
+          },
+          "userId": {
+            "type": "number",
+            "description": "ID do usuário",
+            "example": 1
+          },
+          "categoryId": {
+            "type": "number",
+            "description": "ID da categoria",
+            "example": 1
+          }
+        }
+      },
+      "ResponseComment": {
+        "type": "object",
+        "properties": {
+          "text_comment": {
+            "type": "string",
+            "description": "Comentário a ser criado",
+            "example": "Qual comando para realizar uma migração no prisma ?"
+          },
+          "userId": {
+            "type": "number",
+            "description": "ID do usuário",
+            "example": 2
+          },
+          "categoryId": {
+            "type": "number",
+            "description": "ID da categoria",
+            "example": 2
           }
         }
       }
